fix: table align css

--- a/src/templates/ignored/index-ignored.css
+++ b/src/templates/ignored/index-ignored.css
@@ -242,7 +242,6 @@ td,
 th {
   padding: 10px;
   border: 1px solid #3e4446;
-  text-align: left;
   font-size: 18px;
 }
 
